manifests/kustomize/overlays/istio-strict-mtls/peerauthentication.yaml
# Enable STRICT mTLS for Kubeflow namespace
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: kfp-strict-mtls
  namespace: kubeflow
spec:
  mtls:
    mode: STRICT
